# libice_simplify

./: CMakeLists.txt  README.md  build_cmake.sh
3rd/include/logger/: glog_logger.h
client_tests/: CMakeLists.txt
client_tests/src/: main.cpp  test_async.cpp  test_sync.cpp
cmake/: Findlibgflags.cmake  Findlibglog.cmake  PrintFlags.cmake
server_tests/: CMakeLists.txt
server_tests/impl/: helloI.cpp  helloI.h
server_tests/src/: main.cpp  test_async.cpp  test_sync.cpp
slice/: hello.ice
stub/: hello.cpp  hello.h
